# triforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmark/: README.md  compare.py  real_benchmark.py
benchmark/results/: 2026-05-05-mvp-comparison.json  2026-05-05-mvp-comparison.md  2026-05-06-llm-quality-comparison.md  2026-05-06-real-benchmark.json  2026-05-06-real-benchmark.md  2026-05-06-realistic-token-comparison.md
benchmark/sandbox-todo-app/: README.md  app.py  db.py
docs/: architecture.md  credits.md  index.md  insforge-mode.md  install.md  privacy.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-05-triforge-mvp.md
docs/superpowers/specs/: 2026-05-05-triforge-design.md
site/: 404.html  index.html  sitemap.xml
site/architecture/: index.html
site/credits/: index.html
site/insforge-mode/: index.html
site/install/: index.html
site/privacy/: index.html
site/search/: search_index.json
site/superpowers/plans/2026-05-05-triforge-mvp/: index.html
site/superpowers/specs/2026-05-05-triforge-design/: index.html
site/troubleshooting/: index.html
src/triforge/: __init__.py  _config.py  _embedder.py  _hashing.py  _llm.py  _locking.py  _paths.py  _privacy.py  _privacy_llm.py  cli.py  installer.py
src/triforge/memory/: __init__.py  capture.py  graph.py  indexer.py  insforge_export.py  openie.py  prelude.py  search.py  server.py  store.py
src/triforge/skills/: rag.md
src/triforge/templates/: AGENTS_section.md  settings.local.json.tmpl
tests/: conftest.py  test_capture.py  test_cli.py  test_config.py  test_embedder.py  test_graph.py  test_hashing.py  test_indexer.py  test_insforge_export.py  test_installer.py  test_llm.py  test_locking.py  test_openie.py  test_paths.py  test_prelude.py  test_privacy.py  test_privacy_llm.py  test_search.py  test_server.py  test_store.py
