[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "triforge"
version = "0.1.0"
description = "One install — three dimensions of intelligence for Claude Code: graph memory + code search + backend, in any project."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Ilyas Mukiev", email = "madani200160@gmail.com" },
]
keywords = [
    "claude-code",
    "mcp",
    "rag",
    "hipporag",
    "semble",
    "insforge",
    "memory",
    "agents",
    "graphrag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # MCP server runtime
    "mcp>=1.0,<2.0",
    # Memory: dense embeddings + lexical
    "model2vec>=0.4.0",
    "vicinity>=0.4.4",
    "bm25s>=0.2.0",
    # Storage
    "pyarrow>=15.0",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # Cross-platform path/lock helpers
    "platformdirs>=4.2",
    "portalocker>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "pyyaml>=6.0",
    "build>=1.2",
]
hipporag = [
    # Plan 2: graph memory + multi-hop reasoning
    "hipporag>=2.0",
    "networkx>=3.0",
]
llm = [
    # Plan 2: auto-fallback LLM cleaner + summarizer
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
]
insforge = [
    # Plan 3: InsForge pgvector persistence backend
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.urls]
Homepage = "https://github.com/ilyasmukiev/triforge"
Documentation = "https://github.com/ilyasmukiev/triforge#readme"
Repository = "https://github.com/ilyasmukiev/triforge"
Issues = "https://github.com/ilyasmukiev/triforge/issues"
Changelog = "https://github.com/ilyasmukiev/triforge/blob/main/CHANGELOG.md"

[project.scripts]
triforge = "triforge.cli:app"
triforge-memory = "triforge.memory.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/triforge"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "benchmark", "docs", "README.md", "LICENSE", "NOTICE", "CHANGELOG.md", "CONTRIBUTING.md", "pyproject.toml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: integration tests that hit real LLMs / large datasets",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
